--- a/interpolacionLagrange/nbproject/private/private.properties
+++ b/interpolacionLagrange/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\josej\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Judi\\AppData\\Roaming\\NetBeans\\14\\build.properties
